--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   transparent_image: "^0.1.0"
   http: ^0.12.0
   fluwx: 0.5.1
+  flutter_qq: 0.0.4
 
 dev_dependencies:
   flutter_test:
