--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   transparent_image: "^0.1.0"
   http: ^0.12.0
   fluwx: 0.5.2
+  sqflite: any
+  path_provider: '>=0.3.0'
 
 dev_dependencies:
   flutter_test:
