--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -18,8 +18,37 @@
 	<string>1.7.0</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLName</key>
+			<string>tencent</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>tencent1104005798</string>
+			</array>
+		</dict>
+	</array>
 	<key>CFBundleVersion</key>
 	<string>$(FLUTTER_BUILD_NUMBER)</string>
+	<key>LSApplicationQueriesSchemes</key>
+    	<array>
+    		<string>wtloginmqq2</string>
+    		<string>mqqopensdkapiV3</string>
+    		<string>mqqwpa</string>
+    		<string>mqqopensdkapiV2</string>
+    		<string>mqqOpensdkSSoLogin</string>
+    		<string>mqq</string>
+    	</array>
+    	<key>LSRequiresIPhoneOS</key>
+    	<true/>
+    	<key>NSAppTransportSecurity</key>
+    	<dict>
+    		<key>NSAllowsArbitraryLoads</key>
+    		<true/>
+    	</dict>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>UILaunchStoryboardName</key>
