--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,10 @@ dependencies:
   path_provider: '>=0.3.0'
   package_info: ^0.3.2
   fluttertoast: ^2.2.3
+  json_serializable: ^2.0.1
+  fake_tencent:
+      git:
+        url: https://github.com/v7lin/fake_tencent.git
 
 dev_dependencies:
   flutter_test:
