--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,9 @@ dependencies:
   package_info: ^0.3.2
   fluttertoast: ^2.2.3
   json_serializable: ^2.0.1
+  fake_weibo:
+      git:
+        url: https://github.com/v7lin/fake_weibo.git
   fake_tencent:
       git:
         url: https://github.com/v7lin/fake_tencent.git
