--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -2,6 +2,30 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+    <key>NSAppleMusicUsageDescription</key>
+    <string>是否允许此App访问你的媒体资料库？</string>
+    <key>NSBluetoothPeripheralUsageDescription</key>
+    <string>是否许允此App使用蓝牙？</string>
+    <key>NSCalendarsUsageDescription</key>
+    <string>是否允许此App使用日历？</string>
+    <key>NSCameraUsageDescription</key>
+    <string>是否允许此App使用你的相机？</string>
+    <key>NSContactsUsageDescription</key>
+    <string>是否允许此App访问你的通讯录？</string>
+    <key>NSLocationAlwaysUsageDescription</key>
+    <string>我们需要通过您的地理位置信息获取您周边的相关数据</string>
+    <key>NSLocationUsageDescription</key>
+    <string>我们需要通过您的地理位置信息获取您周边的相关数据</string>
+    <key>NSLocationWhenInUseUsageDescription</key>
+    <string>我们需要通过您的地理位置信息获取您周边的相关数据</string>
+    <key>NSMicrophoneUsageDescription</key>
+    <string>是否允许此App使用你的麦克风？</string>
+    <key>NSMotionUsageDescription</key>
+    <string>是否允许此App访问运动与健康？</string>
+    <key>NSPhotoLibraryUsageDescription</key>
+    <string>是否允许此App访问你的媒体资料库？</string>
+    <key>NSSpeechRecognitionUsageDescription</key>
+    <string>是否允许此App使用语音识别？</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
@@ -15,7 +39,7 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.7.0</string>
+	<string>2.0</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleURLTypes</key>
@@ -31,50 +55,50 @@
 			</array>
 		</dict>
 		<dict>
-            <key>CFBundleTypeRole</key>
-            <string>Editor</string>
-            <key>CFBundleURLName</key>
-            <string>com.weibo</string>
-            <key>CFBundleURLSchemes</key>
-            	<array>
-            	    <string>wb3393861383</string>
-            	</array>
-         </dict>
-         <dict>
-         	<key>CFBundleTypeRole</key>
-         	<string>Editor</string>
-         	<key>CFBundleURLName</key>
-         	<string>tencent</string>
-         	<key>CFBundleURLSchemes</key>
-         	<array>
-         		<string>tencent1104005798</string>
-         	</array>
-         </dict>
-	</array>
-	<key>LSApplicationQueriesSchemes</key>
-	<array>
-	    <string>sinaweibo</string>
-        <string>sinaweibohd</string>
-        <string>weibosdk</string>
-        <string>weibosdk2.5</string>
-		<string>mqq</string>
-		<string>mqqOpensdkSSoLogin</string>
-        <string>mqzone</string>
-        <string>alipayauth</string>
-        <string>alipay</string>
-        <string>safepay</string>
-        <string>mqqapi</string>
-        <string>mqqopensdkapiV3</string>
-        <string>mqqopensdkapiV2</string>
-        <string>mqqapiwallet</string>
-        <string>mqqwpa</string>
-        <string>mqqbrowser</string>
-        <string>wtloginmqq2</string>
-        <string>weixin</string>
-        <string>wechat</string>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLName</key>
+			<string>com.weibo</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>wb3393861383</string>
+			</array>
+		</dict>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLName</key>
+			<string>tencent</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>tencent1104005798</string>
+			</array>
+		</dict>
 	</array>
 	<key>CFBundleVersion</key>
 	<string>$(FLUTTER_BUILD_NUMBER)</string>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>sinaweibo</string>
+		<string>sinaweibohd</string>
+		<string>weibosdk</string>
+		<string>weibosdk2.5</string>
+		<string>mqq</string>
+		<string>mqqOpensdkSSoLogin</string>
+		<string>mqzone</string>
+		<string>alipayauth</string>
+		<string>alipay</string>
+		<string>safepay</string>
+		<string>mqqapi</string>
+		<string>mqqopensdkapiV3</string>
+		<string>mqqopensdkapiV2</string>
+		<string>mqqapiwallet</string>
+		<string>mqqwpa</string>
+		<string>mqqbrowser</string>
+		<string>wtloginmqq2</string>
+		<string>weixin</string>
+		<string>wechat</string>
+	</array>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSAppTransportSecurity</key>
