--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -2,30 +2,6 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-    <key>NSAppleMusicUsageDescription</key>
-    <string>是否允许此App访问你的媒体资料库？</string>
-    <key>NSBluetoothPeripheralUsageDescription</key>
-    <string>是否许允此App使用蓝牙？</string>
-    <key>NSCalendarsUsageDescription</key>
-    <string>是否允许此App使用日历？</string>
-    <key>NSCameraUsageDescription</key>
-    <string>是否允许此App使用你的相机？</string>
-    <key>NSContactsUsageDescription</key>
-    <string>是否允许此App访问你的通讯录？</string>
-    <key>NSLocationAlwaysUsageDescription</key>
-    <string>我们需要通过您的地理位置信息获取您周边的相关数据</string>
-    <key>NSLocationUsageDescription</key>
-    <string>我们需要通过您的地理位置信息获取您周边的相关数据</string>
-    <key>NSLocationWhenInUseUsageDescription</key>
-    <string>我们需要通过您的地理位置信息获取您周边的相关数据</string>
-    <key>NSMicrophoneUsageDescription</key>
-    <string>是否允许此App使用你的麦克风？</string>
-    <key>NSMotionUsageDescription</key>
-    <string>是否允许此App访问运动与健康？</string>
-    <key>NSPhotoLibraryUsageDescription</key>
-    <string>是否允许此App访问你的媒体资料库？</string>
-    <key>NSSpeechRecognitionUsageDescription</key>
-    <string>是否允许此App使用语音识别？</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
@@ -39,7 +15,7 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>2.0</string>
+	<string>2.1</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleURLTypes</key>
@@ -74,6 +50,7 @@
 				<string>tencent1104005798</string>
 			</array>
 		</dict>
+		<dict/>
 	</array>
 	<key>CFBundleVersion</key>
 	<string>$(FLUTTER_BUILD_NUMBER)</string>
@@ -106,6 +83,30 @@
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
+	<key>NSAppleMusicUsageDescription</key>
+	<string>是否允许此App访问你的媒体资料库？</string>
+	<key>NSBluetoothPeripheralUsageDescription</key>
+	<string>是否许允此App使用蓝牙？</string>
+	<key>NSCalendarsUsageDescription</key>
+	<string>是否允许此App使用日历？</string>
+	<key>NSCameraUsageDescription</key>
+	<string>是否允许此App使用你的相机？</string>
+	<key>NSContactsUsageDescription</key>
+	<string>是否允许此App访问你的通讯录？</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>我们需要通过您的地理位置信息获取您周边的相关数据</string>
+	<key>NSLocationUsageDescription</key>
+	<string>我们需要通过您的地理位置信息获取您周边的相关数据</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>我们需要通过您的地理位置信息获取您周边的相关数据</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>是否允许此App使用你的麦克风？</string>
+	<key>NSMotionUsageDescription</key>
+	<string>是否允许此App访问运动与健康？</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>是否允许此App访问你的媒体资料库？</string>
+	<key>NSSpeechRecognitionUsageDescription</key>
+	<string>是否允许此App使用语音识别？</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
